chart_html_added

--- a/src/components/timer/timer.css
+++ b/src/components/timer/timer.css
@@ -28,7 +28,7 @@
 }
 
 .btn-group-start{
-    margin-left:5.5%;
+    margin:5px 22.5px;
     position: relative;
     display: inline-flex;
     vertical-align: middle;
