--- a/src/components/form-sign/form.css
+++ b/src/components/form-sign/form.css
@@ -68,6 +68,14 @@ label{
 }
 
 #dog-image{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     height: 150px;
     width: 150px;
+    border-radius: 5px;
+}
+
+#text-dog-image{
+    text-align: center;
 }
